# AT21CS11

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  idf_component.yml  library.json  platformio.ini  release_notes.md
.github/workflows/: ci.yml
docs/: AI_coder_prompt_AT21CS01_AT21CS11_driver.md  ARCHITECTURE_SPLIT_PLAN.md  AT21CS01_AT21CS11_complete_driver_report.md  AT21CS01_AT21CS11_datasheet_reference.md  IDF_PORT.md  IDF_PORT_IMPLEMENTATION.md  MIGRATION.md  UNIFICATION_STANDARD.md
docs/extracted-md/: 00_document_inventory.md  01_chip_overview.md  02_pinout_and_signals.md  03_electrical_and_timing.md  04_protocol_commands_and_transactions.md  05_register_map.md  06_modes_interrupts_status_and_faults.md  07_initialization_reset_and_operational_notes.md  08_variant_differences_and_open_questions.md
docs/pdf-extracted-md/: AT21CS11_datasheet.md
examples/01_basic_bringup_cli/: main.cpp
examples/01_general_control_cli/: main.cpp
examples/01_presence_control_cli/: main.cpp
examples/02_memory_security_cli/: main.cpp
examples/02_multi_device_demo/: main.cpp
examples/03_rom_freeze_cli/: main.cpp
examples/common/: At21Example.h  BoardConfig.h  BusDiag.h  CliShell.h  HealthView.h  I2cScanner.h  I2cTransport.h  IdfArduinoCompat.h  LoadCellMap.h  Log.h  TransportAdapter.h
examples/eeprom_read_write/: main.cpp
scripts/: generate_version.py
src/: AT21CS.cpp  YourLib.cpp
test/: test_basic.cpp
tools/: check_cli_contract.py  check_core_timing_guard.py  check_idf_example_contract.py
(+26 files in other folders)
